base.css: Fix Blog Images/Pre Blocks
Fixed the images and pre blocks being completely broken in the
responsive view. This /should/ work, however if it doesn't... I don't
know what to tell you. Help me fix it, I guess.

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -99,12 +99,16 @@ a:hover {
 }
 
 .blog-img img {
-	max-width: 1024px;
-	width: auto;
+	width: 85%;
 	display: block;
 	margin: auto;
 }
 
 .blog-img-caption {
 	text-align: center;
+}
+
+pre {
+	width: auto;
+	white-space: pre-wrap;
 }
